--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation "android.arch.navigation:navigation-fragment-ktx:1.0.0"
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.squareup.picasso:picasso:2.5.2'
     // AppMetrica SDK.
     implementation 'com.yandex.android:mobmetricalib:3.6.4'
     // Optionally. Play Install Referrer library.
